# BerichtsheftGenerator

./: Cargo.toml  README.md  output.txt
scripts/: init.sh
src/: main.rs
src/cli/: mod.rs
src/helper/: custom_cli.rs  mod.rs  user_data.rs
src/report_generator/: mod.rs
