[package]
name = "BerichtsheftGenerator"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive", "cargo"] }
clearscreen = "4.0.2"
dotenv = "0.15.0"
octocrab = "0.44.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
